--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 amethyst = { version = "0.15.1", features = ["vulkan", "tiles"] }
 bimap = "0.5"
 bincode = "1.3"
+bitflags = "1.2"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
